scss/partials/_login_overlay.scss
div.login-overlay-container {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  height: 100%;
  z-index: #{$navbar_zindex + 50};
  padding: 0px;
  opacity: 1;
  transition: 230ms;
  background-color: $carrot_modal_bg;

  @include mobile{
    width: 100%;
    height: auto;
    min-height: 100%;
    overflow: auto;
    position: relative;
    background-color: white;
  }

  button.settings-modal-close {
    position: absolute;
    top: 64px;
    left: 50%;
    margin-left: 268px;

    @include mobile(){
      display: none;
    }
  }

  div.login-overlay {
    position: absolute;
    width: 500px;
    left: 50%;
    top: 0px;
    margin-left: -250px;
    margin-top: 5%;
    background-color: white;
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.05);
    border-radius: 5px;
    padding: 40px 80px;
    max-height: calc(100vh - 80px);
    overflow-y: auto;
    overflow-x: hidden;

    @include mobile{
      position: relative;
      margin-top: 0px;
      margin-left: 0px;
      width: 100%;
      height: auto;
      min-height: 100%;
      left: 0px;
      top: 0px;
      overflow: auto;
      box-shadow: none;
      padding: 0px 32px 40px;
    }

    a.red {
      &:hover {
        color: $oc_red;
      }
    }

    div.login-overlay-cta {
      text-align: center;

      @include mobile() {
        width: 100vw;
        margin-left: -32px;
        height: 64px;
        box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
      }

      div.sign-in-cta {
        @include avenir_H();
        font-size: 32px;
        color: $deep_navy;
        text-transform: none;

        @include mobile() {
          font-size: 18px;
          padding-top: 24px;
        }
      }

      button.top-back-button {
        display: none;

        @include tablet(){
          display: block;
          float: left;
          height: 40px;
          width: 40px;
          background-color: white;
          background-image: cdnUrl("/img/ML/gray_back_x.svg");
          background-size: 14px 14px;
          background-position: center;
          background-repeat: no-repeat;
          padding: 0px;
          position: absolute;
          margin-top: 0px;
          top: 12px;
          left: 24px;
        }
      }

      button.top-continue {
        display: none;

        @include tablet(){
          display: block;
          float: right;
          @include avenir_H();
          font-size: 15px;
          height: 40px;
          width: 40px;
          border-radius: 20px;
          background-color: $sea_blue;
          background-image: cdnUrl("/img/ML/white_continue_arrow.svg");
          background-size: 14px 19px;
          background-position: center;
          background-repeat: no-repeat;
          outline: none;
          border: none;
          padding: 0px;
          position: absolute;
          top: -20px;
          right: 24px;

          &.disabled {
            background-color: $light_ui_grey;
            opacity: 1;
          }
        }
      }
    }

    button.signin-with-google {
      margin-top: 16px !important;
    }

    button.signin-with-slack, button.signin-with-google {
      width: 340px;
      height: 40px;
      border: 1px solid $medium_light_grey;
      color: $light_ui_grey;
      background-color: white;
      border-radius: 6px;
      text-align: center;

      div.signin-with-slack-content, div.signin-with-google-content {
        @include avenir_H();
        font-size: 14px;
        color: $deep_navy;
        width: 100%;
        display: flex;
        justify-content: center;
        align-items: center;

        div.slack-icon {
          width: 21px;
          height: 21px;
          background-image: cdnUrl("/img/ML/slack_normal.svg");
          background-repeat: no-repeat;
          background-size: 21px 21px;
          float: left;
          margin-right: 16px;
        }

        div.google-icon {
          width: 21px;
          height: 21px;
          background-image: cdnUrl("/img/ML/google_signin.svg");
          background-repeat: no-repeat;
          float: left;
          margin-right: 16px;
        }
      }

      @include mobile() {
        width: 100%;
      }
    }

    div.or-with-email {
      width: 100%;
      height: 19px;
      margin-top: 36px;
      position: relative;

      div.or-with-email-line {
        position: absolute;
        height: 1px;
        background-color: $carrot_dark_bg_gray;
        width: 340px;
        top: 9px;
        left: 0px;
        display: block;

        @include mobile() {
          display: none;
        }
      }

      div.or-with-email-copy {
        position: absolute;
        top: 0px;
        left: 71px;
        text-align: center;
        @include avenir_R();
        font-size: 14px;
        color: $light_ui_grey;
        margin: 0 auto;
        width: 196px;
        background-color: white;

        @include mobile() {
          left: unset;
          position: relative;
        }
      }
    }

    &.login-with-email, &.signup-with-email, &.password-reset, &.collect-name-pswd, &.collect-pswd {

      div.sign-in-label-container {
        margin-top: 36px;

        label.sign-in-label {
          margin: 0px;
          padding: 0px;
          @include avenir_H();
          font-size: 12px;
          color: $deep_navy;
        }
      }

      div.sign-in-field-container {

        input {
          width: 100%;
          height: 40px;
          border-radius: 4px;
          background-color: white;
          border: 1px solid rgba($carrot_light_gray_1, 0.5);
          outline: none;
          padding: 10px 16px;
          position: relative;
          @include avenir_BOOK();
          font-size: 16px;
          color: $oc_gray_7;
          line-height: 24px;
          letter-spacing: 0.2px;
          box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.07);
          margin-top: 4px;

          @include placeholder() {
            @include avenir_R();
            font-size: 16px;
            color: $carrot_light_gray;
          }

          &.error, &:invalid {
            border: 1px solid rgba($carrot_orange, 0.5);
          }

          &.half{
            width: 49%;
          }
        }

        div.forgot-password {
          margin-top: 4px;
          float: right;

          a {
            @include avenir_R();
            font-size: 12px;
            line-height: 1.5;
            letter-spacing: 1px;
            color: $light_ui_grey;
            @include avenir_H();
            text-decoration: underline;
            &:hover {
              text-decoration: underline;
            }
          }
        }
      }

      button {
        width: 100%;
        text-align: center;
        margin-top: 32px;
      }

      button.continue {
        margin-top: 35px;
        outline: none;
        border: none;
        width: 100%;
        height: 48px;
        background-color: $sea_blue;
        color: white;
        @include avenir_H();
        font-size: 16px;
        border-radius: 6px;

        &.disabled {
          background-color: $light_ui_grey;
          opacity: 1;
        }
      }

      div.footer-link {
        margin-top: 20px;
        @include avenir_R();
        font-size: 14px;
        color: $deep_navy;
        text-align: center;

        a {
          @include avenir_R();
          font-size: 14px;
          color: $carrot_green;
          margin-left: 8px;

          &:hover {
            text-decoration: underline;
          }
        }
      }
    }

    &.password-reset {
      div.password-reset-cta {
        font-size: 20px;
        line-height: 1.2;
        color: $carrot_text_blue;
        @include avenir_H();
        font-weight: 400;
      }

      div.password-reset-label-container {
        margin-top: 20px;

        label.password-reset-label {
          font-size: 12px;
          color: $deep_navy;
          @include avenir_H();
          margin: 0px;
          padding: 0px;
        }
      }
    }

    div.login-overlay-content {
      div.slack-disclaimer {
        font-size: 14px;
        color: $oc_gray_7;
        @include avenir_M();
        letter-spacing: 0.4px;
        text-align: center;
        padding: 20px 20px 0;
      }
    }

    button.login-button {
      margin-top: 37px;
    }

    div.login-overlay-footer {
      background-color: $carrot_light_gray_2;
      position: relative;
      width: 100%;
      bottom: 0px;
      padding: 16px 32px;
      margin-top: 16px;

      @include mobile(){
        position: relative;
        background-color: white;
      }

      a {
        color: $carrot_light_gray;
        @include avenir_H();
        font-size: 14px;

        span.blue-link {
          color: $carrot_text_blue;
        }

        &:hover span.underline, span.underline:hover {
          text-decoration: underline;
        }
      }
    }
  }
}

